feat: add cache in documentation
